# plism-benchmark

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: page.yml  publish.yml  python-app.yml
assets/: tiles_subset_2713.npy  tiles_subset_460.npy  tiles_subset_5426.npy  tiles_subset_8364.npy
docs/: Makefile  conf.py  contributing.rst  index.rst  make.bat
notebooks/: visualization.ipynb
plismbench/: __init__.py  core.py
plismbench/data/: build.py
plismbench/engine/: __init__.py  cli.py  evaluate.py  extract.py
plismbench/engine/extract/: core.py  extract_from_h5.py  extract_from_png.py  utils.py
plismbench/engine/inference/: __init__.py
plismbench/engine/trainer/: __init__.py
plismbench/experiments/inference/: __init__.py
plismbench/experiments/trainer/: __init__.py
plismbench/logger/: __init__.py
plismbench/losses/: __init__.py
plismbench/metrics/: __init__.py  base.py  cosine_similarity.py  retrieval.py
plismbench/models/: __init__.py  bioptimus.py  extractor.py  histai.py  hkust.py  kaiko_ai.py  lunit.py  mahmood_lab.py  meta.py  microsoft.py  owkin.py  paige_ai.py  standford.py  utils.py  xxxx.py
plismbench/optim/: __init__.py
plismbench/utils/: aggregate.py  core.py  evaluate.py  metrics.py  viz.py
scripts/: compute_metrics.sh  evaluate.sh
tests/: __init__.py  test_core.py
tests/data/: __init__.py  build.py
tests/data/io/: __init__.py
tests/data/transforms/: __init__.py
tests/engine/: __init__.py
tests/engine/inference/: __init__.py
tests/engine/trainer/: __init__.py
tests/logger/: __init__.py
tests/losses/: __init__.py
tests/metrics/: __init__.py  test_cosine_similarity.py  test_retrieval.py
tests/models/: test_bioptimus.py  test_extractors.py  test_histai.py  test_hkust.py  test_kaiko_ai.py  test_lunit.py  test_mahmood_lab.py  test_meta.py  test_microsoft.py  test_owkin.py  test_paige_ai.py  test_standford.py  test_xxxx.py
tests/optim/: __init__.py
tests/utils/: __init__.py
tests/viz/: __init__.py
weights/: h0_mini.pth
